updated views and urls for chat whith the agent

--- a/requirements.txt
+++ b/requirements.txt
@@ -4,5 +4,9 @@ django-allauth[socialaccount]
 django-widget-tweaks
 channels[daphne]
 Pillow
-faiss-cpu
+langchain
+langchain-community
+langchain-core
 langchain-ollama
+faiss-cpu
+python-dotenv
